log
Fri 05 May 2023 06:23:24 PM UTC: 
 tests:  0|5
total_score: 0/70
e86e05e
Fri 05 May 2023 06:27:17 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
e8d1de0
Fri 05 May 2023 06:29:59 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
18bd14e
Fri 05 May 2023 06:31:57 PM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
e21a2f6
Fri 05 May 2023 06:33:42 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
130f836
Fri 05 May 2023 06:34:08 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
75ce8e4
Fri 05 May 2023 06:42:50 PM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:62:46: error: expected ‘;’ before ‘else’
   62 |         if(fila[n->sudo[i][k]] == 1) return 0
      |                                              ^
      |                                              ;
   63 |         else fila[n->sudo[i][k]] = 1
      |         ~~~~                                  
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
80d702c
